@@ -12,7 +12,7 @@
 #define FEATURE_BINARY_FLOATING_POINT
 #define FEATURE_BRANCH_AND_SET_AUTHORITY
 #define FEATURE_BROADCASTED_PURGING
-// #define FEATURE_CANCEL_IO_FACILITY
+#define FEATURE_CANCEL_IO_FACILITY
 #define FEATURE_CALLED_SPACE_IDENTIFICATION
 #define FEATURE_CHANNEL_SUBSYSTEM
 #define FEATURE_CHECKSUM_INSTRUCTION
