@@ -1563,6 +1563,7 @@ int  stchan_id (REGS *regs, U16 chan);
 int  testch (REGS *regs, U16 chan);
 int  testio (REGS *regs, DEVBLK *dev, BYTE ibyte);
 int  test_subchan (REGS *regs, DEVBLK *dev, IRB *irb);
+int  cancel_subchan (REGS *regs, DEVBLK *dev);
 void clear_subchan (REGS *regs, DEVBLK *dev);
 int  halt_subchan (REGS *regs, DEVBLK *dev);
 int  haltio (REGS *regs, DEVBLK *dev, BYTE ibyte);
@@ -2076,6 +2077,7 @@ DEF_INST(set_address_limit);
 DEF_INST(set_channel_monitor);
 DEF_INST(reset_channel_path);
 DEF_INST(start_subchannel);
+DEF_INST(cancel_subchannel);
 DEF_INST(store_channel_path_status);
 DEF_INST(store_channel_report_word);
 DEF_INST(store_subchannel);
