@@ -1,3 +1,4 @@
+22 Nov 2001 Cancel Subchannel (XSCH) function and instruction - Jan Jaeger
 21 Nov 2001 OPTION_SYNCIO *is* compatible with OPTION_FISHIO - Greg Smith
 18 Nov 2001 Synchronous I/O - Greg Smith
 18 Nov 2001 Add OPTION_IODELAY to bypass linux/zseries bug - Jan Jaeger
